--- a/css/style_2.css
+++ b/css/style_2.css
@@ -39,7 +39,7 @@ header p {
 }
 
 .navbar {
-    background-color: #222;
+    background-color: #22222225;
     display: flex;
     justify-content: flex-end;
 }
